# Fields2Cover

./: CMakeLists.txt
cmake/: F2CUtils.cmake
include/: fields2cover.h
include/fields2cover/objectives/: base_objective.h
include/fields2cover/route_planning/: ortools_route_planner.h  route_planner_base.h
src/: fields2cover.cpp
src/fields2cover/route_planning/: ortools_route_planner.cpp  route_planner_base.cpp
tests/: CMakeLists.txt
tests/cpp/route_planning/: route_planner_base_test.cpp
tests/cpp/utils/: visualizer_test.cpp
tutorials/: 5_route_planning.cpp  7_decomposition.cpp  CMakeLists.txt
